# EBMS

./: EBMS_report_pagewise.md  README.md  app.py  extensions.py  main.py  models.py  pyproject.toml
docs/: dbms_queries.sql
routes/: __init__.py  admin_routes.py  auth_routes.py  customer_routes.py
scripts/: seed_demo_data.py
services/: account_service.py  bill_service.py  meter_service.py  payment_service.py  reading_service.py
templates/: admin_dashboard.html  base.html  customer.html  customer_dashboard.html  home.html  login.html  signup.html
templates/admin/: bill_detail.html  bill_generate.html  bills.html  customer_detail.html  customers.html  meter_detail.html  meter_request_detail.html  meter_requests.html  meters.html  payments.html  reading_form.html  readings.html  sql_queries.html  sql_query_detail.html
templates/customer/: address_form.html  addresses.html  bill_detail.html  bills.html  meter_detail.html  meter_request_form.html  meter_requests.html  meters.html  payments.html  profile.html
utils/: auth.py  billing.py  forms.py  query_logger.py  template_helpers.py
